sample/styles/styles.css
body {
  margin: 0;
    font-family: Arial, sans-serif;
}

.splash {
    text-align: center;
    margin: 10% 0 0 0;
    box-sizing: border-box;
}

.splash .message {
    font-size: 44px;
    line-height: 44px;
    font-family: Arial, sans-serif;
}

.splash .subtitle {
    font-size: 28px;

}

.fa-spin {
  -webkit-animation: fa-spin 2s infinite linear;
  animation: fa-spin 2s infinite linear;
}

.splash .fa-spinner {
    text-align: center;
    display: inline-block;
    font-size: 72px;
    margin-top: 50px;
}

.page-host {
    position: absolute;
    left: 0;
    right: 0;
    top: 33px;
    bottom: 0;
    overflow-x: hidden;
    overflow-y: auto;
}

section {
    margin: 0 20px;
}

.navbar-nav li.loader {
    margin: 12px 24px 0 6px;
}

.pictureDetail {
    max-width: 425px;
}

/* animate page transitions */
section.au-enter-active {
  -webkit-animation: fadeInRight 1s;
  animation: fadeInRight 1s;
}

/* animate flickr image entry */
div.au-stagger {
  /* 50ms will be applied between each successive enter operation */
  -webkit-animation-delay:50ms;
  animation-delay:50ms;
}

.flickr-img.au-enter {
  opacity: 0!important;
}

.flickr-img.au-enter-active {
  -webkit-animation: fadeIn 2s;
  animation: fadeIn 2s;
}

.flickr-img > a > img {
  width: 260px;
  height: 180px;
}


/* animation definitions */
@-webkit-keyframes fadeInRight {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(100%, 0, 0);
    transform: translate3d(100%, 0, 0)
  }
  100% {
    opacity: 1;
    -webkit-transform: none;
    transform: none
  }
}

@keyframes fadeInRight {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(100%, 0, 0);
    -ms-transform: translate3d(100%, 0, 0);
    transform: translate3d(100%, 0, 0)
  }
  100% {
    opacity: 1;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none
  }
}


@-webkit-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.overlay
{
    position: absolute;

    left: 0;
    top: 0;
    min-width:100%;
    min-height: 100%;
    height:100%;
    z-index: 10;
    background: rgba(0,0,0,0.3);
}


.overlay-message
{
    position: absolute;
    left: 50%;
    top: 50%;
    z-index: 11;
    font-size:50pt;
    transform: translate(-50%, -50%);
}

.hljs {
  background: inherit !important;
}

.panel-hover:hover {
  cursor: pointer;
}

.panel-hover:hover strong {
  text-decoration: underline !important;
  cursor: pointer;
}

.k-content .row > *,
.k-content .row > *::before,
.k-content .row > *::after {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

.box {
    margin: 4.5em 0;
    padding: 3em;
    background-color: rgba(20,53,80,0.038);
    border: 1px solid rgba(20,53,80,0.05);
}

.console div
{
    background-position: 6px -95px;
    border-bottom: 1px solid #DDD;
    padding: 5px 10px;
    height: 2em;
    line-height: 2em;
    vertical-align: middle;
    color: #333;
    font: 11px Consolas, Monaco, "Bitstream Vera Sans Mono", "Courier New", Courier, monospace;
}

.gitter-open-chat-button {
  display: none;
}

.theme-window {
  background-color: #ebeef0;
}

.tc-theme-list {
  padding: 0;
  width: 100%;
  height: 100%;
}

.demo-section.k-content {
  box-sizing: content-box;
}

.tc-item-selected {
  background-color: #AAA;
}

menu {
  margin: 0;
  padding: 0;
}

.k-button:focus:not(.k-state-disabled):not([disabled]), .k-menu .k-item>.k-link:focus {
  text-decoration: none;
}

.help-docs .k-header {
  font-size: 18px;
}

#doc > .col-md-3, #doc > .col-md-8 {
  height: 790px;
  overflow-y: scroll;
}

#doc {
  margin: 0;
}

